src/org/javaavc/gen/swresample/LibswresampleLibrary.java

	/**
	 * Activate resampling compensation.<br>
	 * Original signature : <code>int swr_set_compensation(SwrContext*, int, int)</code>
	 */
	int swr_set_compensation(PointerByReference s, int sample_delta, int compensation_distance);
	/**
	 * Set a customized input channel mapping.<br>
	 * * @param s           allocated Swr context, not yet initialized<br>
	 * @param channel_map customized input channel mapping (array of channel<br>
	 *                    indexes, -1 for a muted channel)<br>
	 * @return AVERROR error code in case of failure.<br>
	 * Original signature : <code>int swr_set_channel_mapping(SwrContext*, const int*)</code><br>
	 * @deprecated use the safer methods {@link #swr_set_channel_mapping(com.sun.jna.ptr.PointerByReference, java.nio.IntBuffer)} and {@link #swr_set_channel_mapping(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int swr_set_channel_mapping(Pointer s, IntByReference channel_map);
	/**
	 * Set a customized input channel mapping.<br>
	 * * @param s           allocated Swr context, not yet initialized<br>
	 * @param channel_map customized input channel mapping (array of channel<br>
	 *                    indexes, -1 for a muted channel)<br>
	 * @return AVERROR error code in case of failure.<br>
	 * Original signature : <code>int swr_set_channel_mapping(SwrContext*, const int*)</code>
	 */
	int swr_set_channel_mapping(PointerByReference s, IntBuffer channel_map);
	/**
	 * Set a customized input channel mapping.<br>
	 * * @param s           allocated Swr context, not yet initialized<br>
	 * @param channel_map customized input channel mapping (array of channel<br>
	 *                    indexes, -1 for a muted channel)<br>
	 * @return AVERROR error code in case of failure.<br>
	 * Original signature : <code>int swr_set_channel_mapping(SwrContext*, const int*)</code>
	 */
	int swr_set_channel_mapping(PointerByReference s, IntByReference channel_map);
	/**
	 * Set a customized remix matrix.<br>
	 * * @param s       allocated Swr context, not yet initialized<br>
	 * @param matrix  remix coefficients; matrix[i + stride * o] is<br>
	 *                the weight of input channel i in output channel o<br>
	 * @param stride  offset between lines of the matrix<br>
	 * @return  AVERROR error code in case of failure.<br>
	 * Original signature : <code>int swr_set_matrix(SwrContext*, const double*, int)</code><br>
	 * @deprecated use the safer methods {@link #swr_set_matrix(com.sun.jna.ptr.PointerByReference, java.nio.DoubleBuffer, int)} and {@link #swr_set_matrix(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.DoubleByReference, int)} instead
	 */
	@Deprecated 
	int swr_set_matrix(Pointer s, DoubleByReference matrix, int stride);
	/**
	 * Set a customized remix matrix.<br>
	 * * @param s       allocated Swr context, not yet initialized<br>
	 * @param matrix  remix coefficients; matrix[i + stride * o] is<br>
	 *                the weight of input channel i in output channel o<br>
	 * @param stride  offset between lines of the matrix<br>
	 * @return  AVERROR error code in case of failure.<br>
	 * Original signature : <code>int swr_set_matrix(SwrContext*, const double*, int)</code>
	 */
	int swr_set_matrix(PointerByReference s, DoubleBuffer matrix, int stride);
	/**
	 * Set a customized remix matrix.<br>
	 * * @param s       allocated Swr context, not yet initialized<br>
	 * @param matrix  remix coefficients; matrix[i + stride * o] is<br>
	 *                the weight of input channel i in output channel o<br>
	 * @param stride  offset between lines of the matrix<br>
	 * @return  AVERROR error code in case of failure.<br>
	 * Original signature : <code>int swr_set_matrix(SwrContext*, const double*, int)</code>
	 */
	int swr_set_matrix(PointerByReference s, DoubleByReference matrix, int stride);
	/**
	 * Drops the specified number of output samples.<br>
	 * Original signature : <code>int swr_drop_output(SwrContext*, int)</code><br>
	 * @deprecated use the safer method {@link #swr_drop_output(com.sun.jna.ptr.PointerByReference, int)} instead
	 */
	@Deprecated 
	int swr_drop_output(Pointer s, int count);
	/**
	 * Drops the specified number of output samples.<br>
	 * Original signature : <code>int swr_drop_output(SwrContext*, int)</code>
	 */
	int swr_drop_output(PointerByReference s, int count);
	/**
	 * Injects the specified number of silence samples.<br>
	 * Original signature : <code>int swr_inject_silence(SwrContext*, int)</code><br>
	 * @deprecated use the safer method {@link #swr_inject_silence(com.sun.jna.ptr.PointerByReference, int)} instead
	 */
	@Deprecated 
	int swr_inject_silence(Pointer s, int count);
	/**
	 * Injects the specified number of silence samples.<br>
	 * Original signature : <code>int swr_inject_silence(SwrContext*, int)</code>
	 */
	int swr_inject_silence(PointerByReference s, int count);
	/**
	 * Gets the delay the next input sample will experience relative to the next output sample.<br>
	 * * Swresample can buffer data if more input has been provided than available<br>
	 * output space, also converting between sample rates needs a delay.<br>
	 * This function returns the sum of all such delays.<br>
	 * The exact delay is not necessarily an integer value in either input or<br>
	 * output sample rate. Especially when downsampling by a large value, the<br>
	 * output sample rate may be a poor choice to represent the delay, similarly<br>
	 * for upsampling and the input sample rate.<br>
	 * * @param s     swr context<br>
	 * @param base  timebase in which the returned delay will be<br>
	 *              if its set to 1 the returned delay is in seconds<br>
	 *              if its set to 1000 the returned delay is in milli seconds<br>
	 *              if its set to the input sample rate then the returned delay is in input samples<br>
	 *              if its set to the output sample rate then the returned delay is in output samples<br>
	 *              an exact rounding free delay can be found by using LCM(in_sample_rate, out_sample_rate)<br>
	 * @returns     the delay in 1/base units.<br>
	 * Original signature : <code>int64_t swr_get_delay(SwrContext*, int64_t)</code><br>
	 * @deprecated use the safer method {@link #swr_get_delay(com.sun.jna.ptr.PointerByReference, long)} instead
	 */
	@Deprecated 
	long swr_get_delay(Pointer s, long base);
	/**
	 * Gets the delay the next input sample will experience relative to the next output sample.<br>
	 * * Swresample can buffer data if more input has been provided than available<br>
	 * output space, also converting between sample rates needs a delay.<br>
	 * This function returns the sum of all such delays.<br>
	 * The exact delay is not necessarily an integer value in either input or<br>
	 * output sample rate. Especially when downsampling by a large value, the<br>
	 * output sample rate may be a poor choice to represent the delay, similarly<br>
	 * for upsampling and the input sample rate.<br>
	 * * @param s     swr context<br>
	 * @param base  timebase in which the returned delay will be<br>
	 *              if its set to 1 the returned delay is in seconds<br>
	 *              if its set to 1000 the returned delay is in milli seconds<br>
	 *              if its set to the input sample rate then the returned delay is in input samples<br>
	 *              if its set to the output sample rate then the returned delay is in output samples<br>
	 *              an exact rounding free delay can be found by using LCM(in_sample_rate, out_sample_rate)<br>
	 * @returns     the delay in 1/base units.<br>
	 * Original signature : <code>int64_t swr_get_delay(SwrContext*, int64_t)</code>
	 */
	long swr_get_delay(PointerByReference s, long base);
	/**
	 * Return the LIBSWRESAMPLE_VERSION_INT constant.<br>
	 * Original signature : <code>int swresample_version()</code>
	 */
	int swresample_version();
	/**
	 * Return the swr build-time configuration.<br>
	 * Original signature : <code>char* swresample_configuration()</code>
	 */
	String swresample_configuration();
	/**
	 * Return the swr license.<br>
	 * Original signature : <code>char* swresample_license()</code>
	 */
	String swresample_license();
	public static class AVSampleFormat extends PointerType {
		public AVSampleFormat(Pointer address) {
			super(address);
		}
		public AVSampleFormat() {
			super();
		}
	};
	public static class SwrContext extends PointerType {
		public SwrContext(Pointer address) {
			super(address);
		}
		public SwrContext() {
			super();
		}
	};
}
